deploy: 92f2bab498f993cc1feaeefa10f63bf8d1e30d50

--- a/blogpost/ranking_llm_250727.html
+++ b/blogpost/ranking_llm_250727.html
@@ -172,6 +172,9 @@ U_\gamma(w)=
 \end{cases}
 \end{equation*}\]</div>
 <p>where <span class="math notranslate nohighlight">\(\gamma \in [0, 1]\)</span> is a risk-aversion hyperparameter, and <span class="math notranslate nohighlight">\(w\)</span> is the amount of money earned after making the bet. A <span class="math notranslate nohighlight">\(\gamma = 0\)</span> characterizes a risk-neutral individual, while <span class="math notranslate nohighlight">\(\gamma = 1\)</span> represents a logarithmic risk-averse profile. Intermediate values of <span class="math notranslate nohighlight">\(\gamma\)</span> represent varying degrees of risk aversion.</p>
+<p align="center">
+<img alt="CRRA Utility Function" src="../_static/crra_utility_plot.png" title="CRRA Utility Function" width="700"/>
+</p>
 <p>Other than the utility function, two other factors would influence the <strong>optimal betting strategy</strong>:</p>
 <ol class="arabic simple">
 <li><p><strong>How much money (total budget) to bet:</strong> for simplicity, we assume in our hypothetical scenarior that the bettor has a fixed budget of <strong>one dollar</strong> for each event, so the total budget is <span class="math notranslate nohighlight">\(N\)</span>. In other words, for the <span class="math notranslate nohighlight">\(i\)</span>-th event, any <strong>action/strategy</strong> can be represented as a vector <span class="math notranslate nohighlight">\(a_i = (a_{i1}, a_{i2}, \dots, a_{in_i})\)</span> that sums to 1, where <span class="math notranslate nohighlight">\(a_{ik}\)</span> is the amount bet on outcome <span class="math notranslate nohighlight">\(k\)</span> of event <span class="math notranslate nohighlight">\(i\)</span>.</p></li>
