--- a/genindex.html
+++ b/genindex.html
@@ -12,9 +12,9 @@
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="white" />
   <meta name="theme-color" media="(prefers-color-scheme: dark)" content="black" />
   
-    <title>Index | PM-RANK 0.2.3 documentation</title>
-    <meta property="og:title" content="Index | PM-RANK 0.2.3 documentation" />
-    <meta name="twitter:title" content="Index | PM-RANK 0.2.3 documentation" />
+    <title>Index | PM-RANK 0.2.4 documentation</title>
+    <meta property="og:title" content="Index | PM-RANK 0.2.4 documentation" />
+    <meta name="twitter:title" content="Index | PM-RANK 0.2.4 documentation" />
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=e72c8e07" />
       <link rel="stylesheet" type="text/css" href="_static/theme.css?v=42baaae4" />
       <link rel="stylesheet" type="text/css" href="_static/graphviz.css?v=4ae1632d" />
@@ -40,7 +40,7 @@
     </a><header
   class="sticky top-0 z-40 w-full border-b shadow-sm border-border supports-backdrop-blur:bg-background/60 bg-background/95 backdrop-blur"><div class="container flex items-center h-14">
     <div class="hidden mr-4 md:flex">
-      <a href="index.html" class="flex items-center mr-6"><span class="hidden font-bold sm:inline-block text-clip whitespace-nowrap">PM-RANK 0.2.3 documentation</span>
+      <a href="index.html" class="flex items-center mr-6"><span class="hidden font-bold sm:inline-block text-clip whitespace-nowrap">PM-RANK 0.2.4 documentation</span>
       </a></div><button
       class="inline-flex items-center justify-center h-10 px-0 py-2 mr-2 text-base font-medium transition-colors rounded-md hover:text-accent-foreground hover:bg-transparent md:hidden"
       type="button" @click="showSidebar = true">
@@ -106,7 +106,7 @@
   class="fixed inset-y-0 left-0 md:top-14 z-50 md:z-30 bg-background md:bg-transparent transition-all duration-100 -translate-x-full md:translate-x-0 ml-0 p-6 md:p-0 md:-ml-2 md:h-[calc(100vh-3.5rem)] w-5/6 md:w-full shrink-0 overflow-y-auto border-r border-border md:sticky"
   :aria-hidden="!showSidebar" :class="{ 'translate-x-0': showSidebar }">
 
-    <a href="index.html" class="!justify-start text-sm md:!hidden bg-background"><span class="font-bold text-clip whitespace-nowrap">PM-RANK 0.2.3 documentation</span>
+    <a href="index.html" class="!justify-start text-sm md:!hidden bg-background"><span class="font-bold text-clip whitespace-nowrap">PM-RANK 0.2.4 documentation</span>
     </a>
 
     <div class="relative overflow-hidden md:overflow-auto my-4 md:my-0 h-[calc(100vh-8rem)] md:h-auto">
@@ -141,7 +141,7 @@
 <div class="w-full min-w-0 mx-auto">
 <nav aria-label="breadcrumbs" class="flex items-center mb-4 space-x-1 text-sm text-muted-foreground">
   <a class="overflow-hidden text-ellipsis whitespace-nowrap hover:text-foreground" href="index.html">
-    <span class="hidden md:inline">PM-RANK 0.2.3 documentation</span>
+    <span class="hidden md:inline">PM-RANK 0.2.4 documentation</span>
     <svg aria-label="Home" class="md:hidden" fill="currentColor" height="18" stroke="none" viewbox="0 96 960 960" width="18" xmlns="http://www.w3.org/2000/svg">
       <path d="M240 856h120V616h240v240h120V496L480 316 240 496v360Zm-80 80V456l320-240 320 240v480H520V696h-80v240H160Zm320-350Z"></path>
     </svg>
@@ -214,6 +214,8 @@
         <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ChallengeLoader">(class in src.pm_rank.data.base)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.LogScoringRule.clip_prob">clip_prob (src.pm_rank.LogScoringRule attribute)</a>
 
       <ul style="list-style-type:none">
@@ -222,26 +224,14 @@
         <li><a href="autoapi/src/pm_rank/model/scoring_rule/index.html#src.pm_rank.model.scoring_rule.LogScoringRule.clip_prob">(src.pm_rank.model.scoring_rule.LogScoringRule attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
-      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.correct_option">correct_option (src.pm_rank.data.base.ForecastProblem attribute)</a>
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.correct_option_idx">correct_option_idx (src.pm_rank.data.base.ForecastProblem attribute)</a>
 
       <ul style="list-style-type:none">
-        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastProblem.correct_option">(src.pm_rank.data.ForecastProblem attribute)</a>
+        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastProblem.correct_option_idx">(src.pm_rank.data.ForecastProblem attribute)</a>
 </li>
-        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.correct_option">(src.pm_rank.ForecastProblem attribute)</a>
-</li>
-      </ul></li>
-      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.correct_prob">correct_prob (src.pm_rank.data.base.ForecastEvent attribute)</a>
-
-      <ul style="list-style-type:none">
-        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastEvent.correct_prob">(src.pm_rank.data.ForecastEvent attribute)</a>
-</li>
-        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.correct_prob">(src.pm_rank.ForecastEvent attribute)</a>
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.correct_option_idx">(src.pm_rank.ForecastProblem attribute)</a>
 </li>
       </ul></li>
-      <li><a href="autoapi/src/pm_rank/model/scoring_rule/index.html#src.pm_rank.model.scoring_rule.correct_probs">correct_probs (in module src.pm_rank.model.scoring_rule)</a>
-</li>
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.crowd_probs">crowd_probs (src.pm_rank.data.base.ForecastProblem property)</a>
 
       <ul style="list-style-type:none">
@@ -956,6 +946,16 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.unique_forecasters">(src.pm_rank.ForecastProblem property)</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.unnormalized_probs">unnormalized_probs (src.pm_rank.data.base.ForecastEvent attribute)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastEvent.unnormalized_probs">(src.pm_rank.data.ForecastEvent attribute)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.unnormalized_probs">(src.pm_rank.ForecastEvent attribute)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.url">url (src.pm_rank.data.base.ForecastProblem attribute)</a>
 
       <ul style="list-style-type:none">
@@ -964,8 +964,6 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.url">(src.pm_rank.ForecastProblem attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/loaders/index.html#src.pm_rank.data.loaders.ProphetArenaChallengeLoader.use_bid_for_odds">use_bid_for_odds (src.pm_rank.data.loaders.ProphetArenaChallengeLoader attribute)</a>
 
       <ul style="list-style-type:none">
@@ -989,20 +987,12 @@
   <h2 id="V">V</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
-      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.validate_correct_option">validate_correct_option() (src.pm_rank.data.base.ForecastProblem method)</a>
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.validate_correct_option_idx">validate_correct_option_idx() (src.pm_rank.data.base.ForecastProblem method)</a>
 
       <ul style="list-style-type:none">
-        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastProblem.validate_correct_option">(src.pm_rank.data.ForecastProblem method)</a>
+        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastProblem.validate_correct_option_idx">(src.pm_rank.data.ForecastProblem method)</a>
 </li>
-        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.validate_correct_option">(src.pm_rank.ForecastProblem method)</a>
-</li>
-      </ul></li>
-      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.validate_correct_probability">validate_correct_probability() (src.pm_rank.data.base.ForecastEvent method)</a>
-
-      <ul style="list-style-type:none">
-        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastEvent.validate_correct_probability">(src.pm_rank.data.ForecastEvent method)</a>
-</li>
-        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.validate_correct_probability">(src.pm_rank.ForecastEvent method)</a>
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.validate_correct_option_idx">(src.pm_rank.ForecastProblem method)</a>
 </li>
       </ul></li>
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.validate_forecasts">validate_forecasts() (src.pm_rank.data.base.ForecastProblem method)</a>
@@ -1029,14 +1019,22 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.validate_probabilities">(src.pm_rank.ForecastEvent method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastChallenge.validate_problems">validate_problems() (src.pm_rank.data.base.ForecastChallenge method)</a>
 
       <ul style="list-style-type:none">
         <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastChallenge.validate_problems">(src.pm_rank.data.ForecastChallenge method)</a>
 </li>
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastChallenge.validate_problems">(src.pm_rank.ForecastChallenge method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.validate_unnormalized_probabilities">validate_unnormalized_probabilities() (src.pm_rank.data.base.ForecastEvent method)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastEvent.validate_unnormalized_probabilities">(src.pm_rank.data.ForecastEvent method)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.validate_unnormalized_probabilities">(src.pm_rank.ForecastEvent method)</a>
 </li>
       </ul></li>
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.AverageReturn.verbose">verbose (src.pm_rank.AverageReturn attribute)</a>
@@ -1090,7 +1088,7 @@
 </footer>
   </div>
   
-    <script src="_static/documentation_options.js?v=a47416a6"></script>
+    <script src="_static/documentation_options.js?v=6ffd866b"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script defer="defer" src="_static/theme.js?v=073f68d9"></script>
