--- a/genindex.html
+++ b/genindex.html
@@ -12,9 +12,9 @@
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="white" />
   <meta name="theme-color" media="(prefers-color-scheme: dark)" content="black" />
   
-    <title>Index | PM-RANK 0.2.4 documentation</title>
-    <meta property="og:title" content="Index | PM-RANK 0.2.4 documentation" />
-    <meta name="twitter:title" content="Index | PM-RANK 0.2.4 documentation" />
+    <title>Index | PM-RANK 0.2.5 documentation</title>
+    <meta property="og:title" content="Index | PM-RANK 0.2.5 documentation" />
+    <meta name="twitter:title" content="Index | PM-RANK 0.2.5 documentation" />
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=e72c8e07" />
       <link rel="stylesheet" type="text/css" href="_static/theme.css?v=42baaae4" />
       <link rel="stylesheet" type="text/css" href="_static/graphviz.css?v=4ae1632d" />
@@ -40,7 +40,7 @@
     </a><header
   class="sticky top-0 z-40 w-full border-b shadow-sm border-border supports-backdrop-blur:bg-background/60 bg-background/95 backdrop-blur"><div class="container flex items-center h-14">
     <div class="hidden mr-4 md:flex">
-      <a href="index.html" class="flex items-center mr-6"><span class="hidden font-bold sm:inline-block text-clip whitespace-nowrap">PM-RANK 0.2.4 documentation</span>
+      <a href="index.html" class="flex items-center mr-6"><span class="hidden font-bold sm:inline-block text-clip whitespace-nowrap">PM-RANK 0.2.5 documentation</span>
       </a></div><button
       class="inline-flex items-center justify-center h-10 px-0 py-2 mr-2 text-base font-medium transition-colors rounded-md hover:text-accent-foreground hover:bg-transparent md:hidden"
       type="button" @click="showSidebar = true">
@@ -106,7 +106,7 @@
   class="fixed inset-y-0 left-0 md:top-14 z-50 md:z-30 bg-background md:bg-transparent transition-all duration-100 -translate-x-full md:translate-x-0 ml-0 p-6 md:p-0 md:-ml-2 md:h-[calc(100vh-3.5rem)] w-5/6 md:w-full shrink-0 overflow-y-auto border-r border-border md:sticky"
   :aria-hidden="!showSidebar" :class="{ 'translate-x-0': showSidebar }">
 
-    <a href="index.html" class="!justify-start text-sm md:!hidden bg-background"><span class="font-bold text-clip whitespace-nowrap">PM-RANK 0.2.4 documentation</span>
+    <a href="index.html" class="!justify-start text-sm md:!hidden bg-background"><span class="font-bold text-clip whitespace-nowrap">PM-RANK 0.2.5 documentation</span>
     </a>
 
     <div class="relative overflow-hidden md:overflow-auto my-4 md:my-0 h-[calc(100vh-8rem)] md:h-auto">
@@ -141,7 +141,7 @@
 <div class="w-full min-w-0 mx-auto">
 <nav aria-label="breadcrumbs" class="flex items-center mb-4 space-x-1 text-sm text-muted-foreground">
   <a class="overflow-hidden text-ellipsis whitespace-nowrap hover:text-foreground" href="index.html">
-    <span class="hidden md:inline">PM-RANK 0.2.4 documentation</span>
+    <span class="hidden md:inline">PM-RANK 0.2.5 documentation</span>
     <svg aria-label="Home" class="md:hidden" fill="currentColor" height="18" stroke="none" viewbox="0 96 960 960" width="18" xmlns="http://www.w3.org/2000/svg">
       <path d="M240 856h120V616h240v240h120V496L480 316 240 496v360Zm-80 80V456l320-240 320 240v480H520V696h-80v240H160Zm320-350Z"></path>
     </svg>
@@ -194,6 +194,22 @@
   <h2 id="C">C</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastChallenge.categories">categories (src.pm_rank.data.base.ForecastChallenge attribute)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastChallenge.categories">(src.pm_rank.data.ForecastChallenge attribute)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastChallenge.categories">(src.pm_rank.ForecastChallenge attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.category">category (src.pm_rank.data.base.ForecastProblem attribute)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastProblem.category">(src.pm_rank.data.ForecastProblem attribute)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.category">(src.pm_rank.ForecastProblem attribute)</a>
+</li>
+      </ul></li>
       <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.GJOChallengeLoader.challenge_title">challenge_title (src.pm_rank.data.GJOChallengeLoader attribute)</a>
 
       <ul style="list-style-type:none">
@@ -206,6 +222,8 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ProphetArenaChallengeLoader.challenge_title">(src.pm_rank.ProphetArenaChallengeLoader attribute)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ChallengeLoader">ChallengeLoader (class in src.pm_rank)</a>
 
       <ul style="list-style-type:none">
@@ -214,8 +232,6 @@
         <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ChallengeLoader">(class in src.pm_rank.data.base)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.LogScoringRule.clip_prob">clip_prob (src.pm_rank.LogScoringRule attribute)</a>
 
       <ul style="list-style-type:none">
@@ -264,12 +280,12 @@
   <h2 id="E">E</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
-      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.end_date">end_date (src.pm_rank.data.base.ForecastProblem attribute)</a>
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.end_time">end_time (src.pm_rank.data.base.ForecastProblem attribute)</a>
 
       <ul style="list-style-type:none">
-        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastProblem.end_date">(src.pm_rank.data.ForecastProblem attribute)</a>
+        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastProblem.end_time">(src.pm_rank.data.ForecastProblem attribute)</a>
 </li>
-        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.end_date">(src.pm_rank.ForecastProblem attribute)</a>
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.end_time">(src.pm_rank.ForecastProblem attribute)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -305,6 +321,16 @@
         <li><a href="autoapi/src/pm_rank/model/scoring_rule/index.html#src.pm_rank.model.scoring_rule.ScoringRule.fit">(src.pm_rank.model.scoring_rule.ScoringRule method)</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.AverageReturn.fit_by_category">fit_by_category() (src.pm_rank.AverageReturn method)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/model/average_return/index.html#src.pm_rank.model.average_return.AverageReturn.fit_by_category">(src.pm_rank.model.average_return.AverageReturn method)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.AverageReturn.fit_by_category">(src.pm_rank.model.AverageReturn method)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/scoring_rule/index.html#src.pm_rank.model.scoring_rule.ScoringRule.fit_by_category">(src.pm_rank.model.scoring_rule.ScoringRule method)</a>
+</li>
+      </ul></li>
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.AverageReturn.fit_stream">fit_stream() (src.pm_rank.AverageReturn method)</a>
 
       <ul style="list-style-type:none">
@@ -322,7 +348,11 @@
 </li>
         <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.AverageReturn.fit_stream_with_timestamp">(src.pm_rank.model.AverageReturn method)</a>
 </li>
+        <li><a href="autoapi/src/pm_rank/model/scoring_rule/index.html#src.pm_rank.model.scoring_rule.ScoringRule.fit_stream_with_timestamp">(src.pm_rank.model.scoring_rule.ScoringRule method)</a>
+</li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastChallenge.forecast_problems">forecast_problems (src.pm_rank.data.base.ForecastChallenge attribute)</a>
 
       <ul style="list-style-type:none">
@@ -331,8 +361,6 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastChallenge.forecast_problems">(src.pm_rank.ForecastChallenge attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastChallenge">ForecastChallenge (class in src.pm_rank)</a>
 
       <ul style="list-style-type:none">
@@ -771,6 +799,14 @@
 </li>
       <li><a href="autoapi/src/pm_rank/model/scoring_rule/index.html#src.pm_rank.model.scoring_rule.ScoringRule">ScoringRule (class in src.pm_rank.model.scoring_rule)</a>
 </li>
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.set_unnormalized_probs_default">set_unnormalized_probs_default() (src.pm_rank.data.base.ForecastEvent method)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastEvent.set_unnormalized_probs_default">(src.pm_rank.data.ForecastEvent method)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.set_unnormalized_probs_default">(src.pm_rank.ForecastEvent method)</a>
+</li>
+      </ul></li>
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.spearman_correlation">spearman_correlation() (in module src.pm_rank)</a>
 
       <ul style="list-style-type:none">
@@ -815,6 +851,8 @@
         <li><a href="autoapi/src/pm_rank/data/loaders/index.html#module-src.pm_rank.data.loaders">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li>
     src.pm_rank.data.utils
 
@@ -822,8 +860,6 @@
         <li><a href="autoapi/src/pm_rank/data/utils/index.html#module-src.pm_rank.data.utils">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li>
     src.pm_rank.model
 
@@ -954,8 +990,6 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.unnormalized_probs">(src.pm_rank.ForecastEvent attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.url">url (src.pm_rank.data.base.ForecastProblem attribute)</a>
 
       <ul style="list-style-type:none">
@@ -964,6 +998,8 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.url">(src.pm_rank.ForecastProblem attribute)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/loaders/index.html#src.pm_rank.data.loaders.ProphetArenaChallengeLoader.use_bid_for_odds">use_bid_for_odds (src.pm_rank.data.loaders.ProphetArenaChallengeLoader attribute)</a>
 
       <ul style="list-style-type:none">
@@ -972,6 +1008,12 @@
       </ul></li>
       <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.IRTModel.use_empirical_quantiles">use_empirical_quantiles (src.pm_rank.model.irt.IRTModel attribute)</a>
 </li>
+      <li><a href="autoapi/src/pm_rank/data/loaders/index.html#src.pm_rank.data.loaders.ProphetArenaChallengeLoader.use_open_time">use_open_time (src.pm_rank.data.loaders.ProphetArenaChallengeLoader attribute)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ProphetArenaChallengeLoader.use_open_time">(src.pm_rank.ProphetArenaChallengeLoader attribute)</a>
+</li>
+      </ul></li>
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.username">username (src.pm_rank.data.base.ForecastEvent attribute)</a>
 
       <ul style="list-style-type:none">
@@ -987,6 +1029,14 @@
   <h2 id="V">V</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
+      <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastChallenge.validate_categories">validate_categories() (src.pm_rank.data.base.ForecastChallenge method)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastChallenge.validate_categories">(src.pm_rank.data.ForecastChallenge method)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastChallenge.validate_categories">(src.pm_rank.ForecastChallenge method)</a>
+</li>
+      </ul></li>
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastProblem.validate_correct_option_idx">validate_correct_option_idx() (src.pm_rank.data.base.ForecastProblem method)</a>
 
       <ul style="list-style-type:none">
@@ -1019,6 +1069,8 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.validate_probabilities">(src.pm_rank.ForecastEvent method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastChallenge.validate_problems">validate_problems() (src.pm_rank.data.base.ForecastChallenge method)</a>
 
       <ul style="list-style-type:none">
@@ -1027,8 +1079,6 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastChallenge.validate_problems">(src.pm_rank.ForecastChallenge method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.validate_unnormalized_probabilities">validate_unnormalized_probabilities() (src.pm_rank.data.base.ForecastEvent method)</a>
 
       <ul style="list-style-type:none">
@@ -1088,7 +1138,7 @@
 </footer>
   </div>
   
-    <script src="_static/documentation_options.js?v=6ffd866b"></script>
+    <script src="_static/documentation_options.js?v=cb850272"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script defer="defer" src="_static/theme.js?v=073f68d9"></script>
