deploy: 0466c897e52d6279003c2b68a60ef8c5cee02669

--- a/genindex.html
+++ b/genindex.html
@@ -258,6 +258,14 @@
   <h2 id="C">C</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
+      <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.CalibrationMetric">CalibrationMetric (class in src.pm_rank)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.CalibrationMetric">(class in src.pm_rank.model)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/calibration/index.html#src.pm_rank.model.calibration.CalibrationMetric">(class in src.pm_rank.model.calibration)</a>
+</li>
+      </ul></li>
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastChallenge.categories">categories (src.pm_rank.data.base.ForecastChallenge attribute)</a>
 
       <ul style="list-style-type:none">
@@ -327,16 +335,18 @@
   <h2 id="D">D</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
+      <li><a href="autoapi/src/pm_rank/model/calibration/index.html#src.pm_rank.model.calibration.data_file">data_file (in module src.pm_rank.model.calibration)</a>
+</li>
       <li><a href="autoapi/src/pm_rank/model/average_return/index.html#src.pm_rank.model.average_return.AverageReturnConfig.default">default() (src.pm_rank.model.average_return.AverageReturnConfig class method)</a>
 
       <ul style="list-style-type:none">
         <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.AverageReturnConfig.default">(src.pm_rank.model.AverageReturnConfig class method)</a>
 </li>
       </ul></li>
-      <li><a href="autoapi/src/pm_rank/model/utils/index.html#src.pm_rank.model.utils.DEFAULT_BOOTSTRAP_CI_CONFIG">DEFAULT_BOOTSTRAP_CI_CONFIG (in module src.pm_rank.model.utils)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
+      <li><a href="autoapi/src/pm_rank/model/utils/index.html#src.pm_rank.model.utils.DEFAULT_BOOTSTRAP_CI_CONFIG">DEFAULT_BOOTSTRAP_CI_CONFIG (in module src.pm_rank.model.utils)</a>
+</li>
       <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.MCMCConfig.device">device (src.pm_rank.model.irt.MCMCConfig attribute)</a>
 
       <ul style="list-style-type:none">
@@ -378,6 +388,8 @@
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.AverageReturn.fit">fit() (src.pm_rank.AverageReturn method)</a>
 
       <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.CalibrationMetric.fit">(src.pm_rank.CalibrationMetric method)</a>
+</li>
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.GeneralizedBT.fit">(src.pm_rank.GeneralizedBT method)</a>
 </li>
         <li><a href="autoapi/src/pm_rank/model/average_return/index.html#src.pm_rank.model.average_return.AverageReturn.fit">(src.pm_rank.model.average_return.AverageReturn method)</a>
@@ -385,6 +397,10 @@
         <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.AverageReturn.fit">(src.pm_rank.model.AverageReturn method)</a>
 </li>
         <li><a href="autoapi/src/pm_rank/model/bradley_terry/index.html#src.pm_rank.model.bradley_terry.GeneralizedBT.fit">(src.pm_rank.model.bradley_terry.GeneralizedBT method)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/calibration/index.html#src.pm_rank.model.calibration.CalibrationMetric.fit">(src.pm_rank.model.calibration.CalibrationMetric method)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.CalibrationMetric.fit">(src.pm_rank.model.CalibrationMetric method)</a>
 </li>
         <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.GeneralizedBT.fit">(src.pm_rank.model.GeneralizedBT method)</a>
 </li>
@@ -423,6 +439,8 @@
         <li><a href="autoapi/src/pm_rank/model/scoring_rule/index.html#src.pm_rank.model.scoring_rule.ScoringRule.fit_stream_with_timestamp">(src.pm_rank.model.scoring_rule.ScoringRule method)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.forecast_id">forecast_id (src.pm_rank.data.base.ForecastEvent attribute)</a>
 
       <ul style="list-style-type:none">
@@ -431,8 +449,6 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.forecast_id">(src.pm_rank.ForecastEvent attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastChallenge.forecast_problems">forecast_problems (src.pm_rank.data.base.ForecastChallenge attribute)</a>
 
       <ul style="list-style-type:none">
@@ -671,6 +687,8 @@
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.AverageReturn.logger">logger (src.pm_rank.AverageReturn attribute)</a>
 
       <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.CalibrationMetric.logger">(src.pm_rank.CalibrationMetric attribute)</a>
+</li>
         <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.GJOChallengeLoader.logger">(src.pm_rank.data.GJOChallengeLoader attribute)</a>
 </li>
         <li><a href="autoapi/src/pm_rank/data/loaders/index.html#src.pm_rank.data.loaders.GJOChallengeLoader.logger">(src.pm_rank.data.loaders.GJOChallengeLoader attribute)</a>
@@ -686,6 +704,10 @@
         <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.AverageReturn.logger">(src.pm_rank.model.AverageReturn attribute)</a>
 </li>
         <li><a href="autoapi/src/pm_rank/model/bradley_terry/index.html#src.pm_rank.model.bradley_terry.GeneralizedBT.logger">(src.pm_rank.model.bradley_terry.GeneralizedBT attribute)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/calibration/index.html#src.pm_rank.model.calibration.CalibrationMetric.logger">(src.pm_rank.model.calibration.CalibrationMetric attribute)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.CalibrationMetric.logger">(src.pm_rank.model.CalibrationMetric attribute)</a>
 </li>
         <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.GeneralizedBT.logger">(src.pm_rank.model.GeneralizedBT attribute)</a>
 </li>
@@ -749,6 +771,8 @@
 </li>
         <li><a href="autoapi/src/pm_rank/model/bradley_terry/index.html#module-src.pm_rank.model.bradley_terry">src.pm_rank.model.bradley_terry</a>
 </li>
+        <li><a href="autoapi/src/pm_rank/model/calibration/index.html#module-src.pm_rank.model.calibration">src.pm_rank.model.calibration</a>
+</li>
         <li><a href="autoapi/src/pm_rank/model/irt/index.html#module-src.pm_rank.model.irt">src.pm_rank.model.irt</a>
 </li>
         <li><a href="autoapi/src/pm_rank/model/scoring_rule/index.html#module-src.pm_rank.model.scoring_rule">src.pm_rank.model.scoring_rule</a>
@@ -779,6 +803,14 @@
         <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastProblem.no_odds">(src.pm_rank.data.ForecastProblem attribute)</a>
 </li>
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.no_odds">(src.pm_rank.ForecastProblem attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.CalibrationMetric.num_bins">num_bins (src.pm_rank.CalibrationMetric attribute)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/model/calibration/index.html#src.pm_rank.model.calibration.CalibrationMetric.num_bins">(src.pm_rank.model.calibration.CalibrationMetric attribute)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.CalibrationMetric.num_bins">(src.pm_rank.model.CalibrationMetric attribute)</a>
 </li>
       </ul></li>
       <li><a href="autoapi/src/pm_rank/model/utils/index.html#src.pm_rank.model.utils.BootstrapCIConfig.num_bootstrap_samples">num_bootstrap_samples (src.pm_rank.model.utils.BootstrapCIConfig attribute)</a>
@@ -867,6 +899,14 @@
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/utils/index.html#src.pm_rank.data.utils.parse_json_or_eval">parse_json_or_eval() (in module src.pm_rank.data.utils)</a>
 </li>
+      <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.CalibrationMetric.plot">plot() (src.pm_rank.CalibrationMetric method)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/model/calibration/index.html#src.pm_rank.model.calibration.CalibrationMetric.plot">(src.pm_rank.model.calibration.CalibrationMetric method)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.CalibrationMetric.plot">(src.pm_rank.model.CalibrationMetric method)</a>
+</li>
+      </ul></li>
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.problem_id">problem_id (src.pm_rank.data.base.ForecastEvent attribute)</a>
 
       <ul style="list-style-type:none">
@@ -885,6 +925,8 @@
 </li>
       <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.IRTObs.problem_ids">problem_ids (src.pm_rank.model.irt.IRTObs attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.IRTObs.problem_idx_to_id">problem_idx_to_id (src.pm_rank.model.irt.IRTObs property)</a>
 </li>
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastChallenge.problem_option_payoffs">problem_option_payoffs (src.pm_rank.data.base.ForecastChallenge property)</a>
@@ -895,8 +937,6 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastChallenge.problem_option_payoffs">(src.pm_rank.ForecastChallenge property)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.probs">probs (src.pm_rank.data.base.ForecastEvent attribute)</a>
 
       <ul style="list-style-type:none">
@@ -1017,8 +1057,6 @@
         <li><a href="autoapi/src/pm_rank/data/loaders/index.html#module-src.pm_rank.data.loaders">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li>
     src.pm_rank.data.utils
 
@@ -1026,6 +1064,8 @@
         <li><a href="autoapi/src/pm_rank/data/utils/index.html#module-src.pm_rank.data.utils">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li>
     src.pm_rank.model
 
@@ -1048,6 +1088,13 @@
 </li>
       </ul></li>
       <li>
+    src.pm_rank.model.calibration
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/model/calibration/index.html#module-src.pm_rank.model.calibration">module</a>
+</li>
+      </ul></li>
+      <li>
     src.pm_rank.model.irt
 
       <ul style="list-style-type:none">
@@ -1066,6 +1113,14 @@
 
       <ul style="list-style-type:none">
         <li><a href="autoapi/src/pm_rank/model/utils/index.html#module-src.pm_rank.model.utils">module</a>
+</li>
+      </ul></li>
+      <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.CalibrationMetric.strategy">strategy (src.pm_rank.CalibrationMetric attribute)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/model/calibration/index.html#src.pm_rank.model.calibration.CalibrationMetric.strategy">(src.pm_rank.model.calibration.CalibrationMetric attribute)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.CalibrationMetric.strategy">(src.pm_rank.model.CalibrationMetric attribute)</a>
 </li>
       </ul></li>
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastChallenge.stream_problems">stream_problems() (src.pm_rank.data.base.ForecastChallenge method)</a>
@@ -1292,6 +1347,8 @@
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.AverageReturn.verbose">verbose (src.pm_rank.AverageReturn attribute)</a>
 
       <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.CalibrationMetric.verbose">(src.pm_rank.CalibrationMetric attribute)</a>
+</li>
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.GeneralizedBT.verbose">(src.pm_rank.GeneralizedBT attribute)</a>
 </li>
         <li><a href="autoapi/src/pm_rank/model/average_return/index.html#src.pm_rank.model.average_return.AverageReturn.verbose">(src.pm_rank.model.average_return.AverageReturn attribute)</a>
@@ -1299,6 +1356,10 @@
         <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.AverageReturn.verbose">(src.pm_rank.model.AverageReturn attribute)</a>
 </li>
         <li><a href="autoapi/src/pm_rank/model/bradley_terry/index.html#src.pm_rank.model.bradley_terry.GeneralizedBT.verbose">(src.pm_rank.model.bradley_terry.GeneralizedBT attribute)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/calibration/index.html#src.pm_rank.model.calibration.CalibrationMetric.verbose">(src.pm_rank.model.calibration.CalibrationMetric attribute)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.CalibrationMetric.verbose">(src.pm_rank.model.CalibrationMetric attribute)</a>
 </li>
         <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.GeneralizedBT.verbose">(src.pm_rank.model.GeneralizedBT attribute)</a>
 </li>
@@ -1322,6 +1383,16 @@
         <li><a href="autoapi/src/pm_rank/data/index.html#src.pm_rank.data.ForecastEvent.weight">(src.pm_rank.data.ForecastEvent attribute)</a>
 </li>
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastEvent.weight">(src.pm_rank.ForecastEvent attribute)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
+      <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.CalibrationMetric.weight_event">weight_event (src.pm_rank.CalibrationMetric attribute)</a>
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/src/pm_rank/model/calibration/index.html#src.pm_rank.model.calibration.CalibrationMetric.weight_event">(src.pm_rank.model.calibration.CalibrationMetric attribute)</a>
+</li>
+        <li><a href="autoapi/src/pm_rank/model/index.html#src.pm_rank.model.CalibrationMetric.weight_event">(src.pm_rank.model.CalibrationMetric attribute)</a>
 </li>
       </ul></li>
   </ul></td>
