--- a/autoapi/src/pm_rank/model/irt/index.html
+++ b/autoapi/src/pm_rank/model/irt/index.html
@@ -17,7 +17,7 @@
 <link href="../../../../../search.html" rel="search" title="Search"/>
 <link href="../../../../../genindex.html" rel="index" title="Index"/>
 <link href="../scoring_rule/index.html" rel="next" title="src.pm_rank.model.scoring_rule"/>
-<link href="../bradley_terry/index.html" rel="prev" title="src.pm_rank.model.bradley_terry"/>
+<link href="../calibration/index.html" rel="prev" title="src.pm_rank.model.calibration"/>
 <script>
     <!-- Prevent Flash of wrong theme -->
       const userPreference = localStorage.getItem('darkMode');
