deploy: f366d0dd6f3a83db868966434e016a35705031f7

--- a/genindex.html
+++ b/genindex.html
@@ -12,9 +12,9 @@
   <meta name="theme-color" media="(prefers-color-scheme: light)" content="white" />
   <meta name="theme-color" media="(prefers-color-scheme: dark)" content="black" />
   
-    <title>Index | PM-RANK 0.2.31 documentation</title>
-    <meta property="og:title" content="Index | PM-RANK 0.2.31 documentation" />
-    <meta name="twitter:title" content="Index | PM-RANK 0.2.31 documentation" />
+    <title>Index | PM-RANK 0.2.32 documentation</title>
+    <meta property="og:title" content="Index | PM-RANK 0.2.32 documentation" />
+    <meta name="twitter:title" content="Index | PM-RANK 0.2.32 documentation" />
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=e72c8e07" />
       <link rel="stylesheet" type="text/css" href="_static/theme.css?v=42baaae4" />
       <link rel="stylesheet" type="text/css" href="_static/graphviz.css?v=4ae1632d" />
@@ -41,7 +41,7 @@
     </a><header
   class="sticky top-0 z-40 w-full border-b shadow-sm border-border supports-backdrop-blur:bg-background/60 bg-background/95 backdrop-blur"><div class="container flex items-center h-14">
     <div class="hidden mr-4 md:flex">
-      <a href="index.html" class="flex items-center mr-6"><span class="hidden font-bold sm:inline-block text-clip whitespace-nowrap">PM-RANK 0.2.31 documentation</span>
+      <a href="index.html" class="flex items-center mr-6"><span class="hidden font-bold sm:inline-block text-clip whitespace-nowrap">PM-RANK 0.2.32 documentation</span>
       </a></div><button
       class="inline-flex items-center justify-center h-10 px-0 py-2 mr-2 text-base font-medium transition-colors rounded-md hover:text-accent-foreground hover:bg-transparent md:hidden"
       type="button" @click="showSidebar = true">
@@ -107,7 +107,7 @@
   class="fixed inset-y-0 left-0 md:top-14 z-50 md:z-30 bg-background md:bg-transparent transition-all duration-100 -translate-x-full md:translate-x-0 ml-0 p-6 md:p-0 md:-ml-2 md:h-[calc(100vh-3.5rem)] w-5/6 md:w-full shrink-0 overflow-y-auto border-r border-border md:sticky"
   :aria-hidden="!showSidebar" :class="{ 'translate-x-0': showSidebar }">
 
-    <a href="index.html" class="!justify-start text-sm md:!hidden bg-background"><span class="font-bold text-clip whitespace-nowrap">PM-RANK 0.2.31 documentation</span>
+    <a href="index.html" class="!justify-start text-sm md:!hidden bg-background"><span class="font-bold text-clip whitespace-nowrap">PM-RANK 0.2.32 documentation</span>
     </a>
 
     <div class="relative overflow-hidden md:overflow-auto my-4 md:my-0 h-[calc(100vh-8rem)] md:h-auto">
@@ -142,7 +142,7 @@
 <div class="w-full min-w-0 mx-auto">
 <nav aria-label="breadcrumbs" class="flex items-center mb-4 space-x-1 text-sm text-muted-foreground">
   <a class="overflow-hidden text-ellipsis whitespace-nowrap hover:text-foreground" href="index.html">
-    <span class="hidden md:inline">PM-RANK 0.2.31 documentation</span>
+    <span class="hidden md:inline">PM-RANK 0.2.32 documentation</span>
     <svg aria-label="Home" class="md:hidden" fill="currentColor" height="18" stroke="none" viewbox="0 96 960 960" width="18" xmlns="http://www.w3.org/2000/svg">
       <path d="M240 856h120V616h240v240h120V496L480 316 240 496v360Zm-80 80V456l320-240 320 240v480H520V696h-80v240H160Zm320-350Z"></path>
     </svg>
@@ -186,6 +186,8 @@
   <h2 id="A">A</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
+      <li><a href="autoapi/algo/index.html#algo.add_individualized_market_baselines_to_scores">add_individualized_market_baselines_to_scores() (in module algo)</a>
+</li>
       <li><a href="autoapi/algo/index.html#algo.add_market_baseline_predictions">add_market_baseline_predictions() (in module algo)</a>
 </li>
       <li><a href="autoapi/src/pm_rank/model/utils/index.html#src.pm_rank.model.utils.AGGREGATE_FNS">AGGREGATE_FNS (in module src.pm_rank.model.utils)</a>
@@ -199,10 +201,10 @@
       </ul></li>
       <li><a href="autoapi/misc/index.html#misc.ALL_CATEGORIES">ALL_CATEGORIES (in module misc)</a>
 </li>
-      <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.IRTObs.anchor_points">anchor_points (src.pm_rank.model.irt.IRTObs attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
+      <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.IRTObs.anchor_points">anchor_points (src.pm_rank.model.irt.IRTObs attribute)</a>
+</li>
       <li><a href="autoapi/utils/index.html#utils.assign_time_bins">assign_time_bins() (in module utils)</a>
 </li>
       <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.AverageReturn">AverageReturn (class in src.pm_rank)</a>
@@ -1583,7 +1585,7 @@
 </footer>
   </div>
   
-    <script src="_static/documentation_options.js?v=e057be8f"></script>
+    <script src="_static/documentation_options.js?v=d7af34e5"></script>
     <script src="_static/doctools.js?v=9bcbadda"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script defer="defer" src="_static/theme.js?v=073f68d9"></script>
