--- a/genindex.html
+++ b/genindex.html
@@ -202,10 +202,17 @@
         <li><a href="autoapi/algo/index.html#module-algo">module</a>
 </li>
       </ul></li>
-      <li><a href="autoapi/misc/index.html#misc.ALL_CATEGORIES">ALL_CATEGORIES (in module misc)</a>
+      <li>
+    algo_legacy
+
+      <ul style="list-style-type:none">
+        <li><a href="autoapi/algo_legacy/index.html#module-algo_legacy">module</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
+      <li><a href="autoapi/misc/index.html#misc.ALL_CATEGORIES">ALL_CATEGORIES (in module misc)</a>
+</li>
       <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.IRTObs.anchor_points">anchor_points (src.pm_rank.model.irt.IRTObs attribute)</a>
 </li>
       <li><a href="autoapi/utils/index.html#utils.assign_time_bins">assign_time_bins() (in module utils)</a>
@@ -340,6 +347,8 @@
 </li>
       </ul></li>
       <li><a href="autoapi/algo/index.html#algo.compute_average_return_neutral">compute_average_return_neutral() (in module algo)</a>
+</li>
+      <li><a href="autoapi/algo_legacy/index.html#algo_legacy.compute_average_return_neutral_legacy">compute_average_return_neutral_legacy() (in module algo_legacy)</a>
 </li>
       <li><a href="autoapi/bootstrap/index.html#bootstrap.compute_bootstrap_ci">compute_bootstrap_ci() (in module bootstrap)</a>
 </li>
@@ -827,6 +836,8 @@
 
       <ul style="list-style-type:none">
         <li><a href="autoapi/algo/index.html#module-algo">algo</a>
+</li>
+        <li><a href="autoapi/algo_legacy/index.html#module-algo_legacy">algo_legacy</a>
 </li>
         <li><a href="autoapi/bootstrap/index.html#module-bootstrap">bootstrap</a>
 </li>
