--- a/genindex.html
+++ b/genindex.html
@@ -1029,16 +1029,12 @@
       </ul></li>
       <li><a href="autoapi/data/index.html#data.NightlyForecasts.PREDICTION_COLS">PREDICTION_COLS (data.NightlyForecasts attribute)</a>
 </li>
-      <li><a href="autoapi/algo/index.html#algo.predictions_csv">predictions_csv (in module algo)</a>
+      <li><a href="autoapi/plot_timestamp/index.html#plot_timestamp.predictions_csv">predictions_csv (in module plot_timestamp)</a>
 
       <ul style="list-style-type:none">
-        <li><a href="autoapi/plot_timestamp/index.html#plot_timestamp.predictions_csv">(in module plot_timestamp)</a>
-</li>
         <li><a href="autoapi/test_algo/index.html#test_algo.predictions_csv">(in module test_algo)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/data/base/index.html#src.pm_rank.data.base.ForecastEvent.problem_id">problem_id (src.pm_rank.data.base.ForecastEvent attribute)</a>
 
       <ul style="list-style-type:none">
@@ -1053,6 +1049,8 @@
         <li><a href="autoapi/src/pm_rank/index.html#src.pm_rank.ForecastProblem.problem_id">(src.pm_rank.ForecastProblem attribute)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul style="margin-left:0;list-style-type:none">
       <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.IRTObs.problem_id_to_idx">problem_id_to_idx (src.pm_rank.model.irt.IRTObs attribute)</a>
 </li>
       <li><a href="autoapi/src/pm_rank/model/irt/index.html#src.pm_rank.model.irt.IRTObs.problem_ids">problem_ids (src.pm_rank.model.irt.IRTObs attribute)</a>
